[package]
name    = "crude"
version = "0.0.1"

authors     = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
description = "Migration toolkit for databases"
homepage    = "https://github.com/termapps/crude"
repository  = "https://github.com/termapps/crude"

edition      = "2021"
rust-version = "1.67.0"

categories = ["command-line-utilities"]
license    = "MIT"
readme     = "README.md"

[dependencies]
clap = { version = "~4.1.8", features = ["derive", "wrap_help"] }

[[bin]]
name = "crude"
path = "src/main.rs"

[profile.release]
lto = "thin"
