[package]
name    = "crude"
version = "0.0.1"

authors     = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
description = "Migration toolkit for databases"
homepage    = "https://github.com/termapps/crude"
repository  = "https://github.com/termapps/crude"

edition      = "2024"
rust-version = "1.88.0"

categories = ["command-line-utilities"]
license    = "MIT"
readme     = "README.md"

[dependencies]
anstream            = "0.6.19"
clap                = { version = "4.5.41", features = ["derive", "env", "wrap_help"] }
clap-verbosity-flag = { version = "3.0.3", default-features = false, features = ["tracing"] }
colorchoice-clap    = "1.0.7"
eyre                = "0.6.12"
owo-colors          = "4.2.2"
proc-exit           = "2.0.2"
tracing             = "0.1.41"
tracing-log         = { version = "0.2.0", default-features = false, features = ["log-tracer", "std"] }
tracing-subscriber  = "0.3.19"

[[bin]]
name = "crude"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto           = "thin"
strip         = true

[profile.release-opt-size]
inherits  = "release"
lto       = true
opt-level = "z"
panic     = "abort"

[workspace.metadata.workspaces]
no_individual_tags = true
